[package]
name = "layer-shell-tt-test"
version = "0.1.0"
edition = "2021"

[features]
gtk3 = ["dep:gtk", "dep:gtk-layer-shell"]
gtk4 = ["dep:gtk4", "dep:gtk4-layer-shell"]


[dependencies]
gtk = { version = "0.18.1", optional = true }
gtk-layer-shell = { version = "0.8.0", optional = true }
gtk4 = { version = "0.7.3", package = "gtk4", optional = true }
gtk4-layer-shell = { version = "0.2.0", package = "gtk4-layer-shell", optional = true }
